[package]
name = "gdrive"
version = "3.9.1"
edition = "2021"

[dependencies]
async-recursion = "1.0.2"
bytes = "1.3.0"
bytesize = "2.0.1"
clap = { version = "4.5.41", features = ["derive"] }
error-trace = { version = "4.0.0", default-features = false }
exponential-backoff = "1.1.0"
futures = "0.3.25"
google-drive3 = "5.0.5"
home = "0.5.4"
hyper = { version = "0.14.23", features = ["stream"] }
md5 = "0.7.0"
mime = "0.3.16"
mime_guess = "2.0.4"
mktemp = "0.5.0"
pin-project-lite = "0.2.16"
rustc_version_runtime = "0.2.1"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.89"
tabwriter = "1.2.1"
tar = "0.4.38"
tempfile = "3.3.0"
tokio = { version = "1.23.0", features = ["full"] }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
